h: Add question heading

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaa55116",
+   "cell_type": "markdown",
+   "id": "10ebc2b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Build a machine learning model to predict the likelihood of heart disease given a set of parameters.Model must at least be 85% on all scoring parametres. Include a detail EDA in your solution and track you progress via GitHub"
+   ]
   }
  ],
  "metadata": {
