d: Load data into notebook

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cb4d5cab",
+   "id": "340ad547",
    "metadata": {},
    "source": [
     "### Build a machine learning model to predict the likelihood of heart disease given a set of parameters.Model must at least be 85% on all scoring parametres. Include a detail EDA in your solution and track you progress via GitHub"
@@ -10,26 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c133eb0",
+   "execution_count": 2,
+   "id": "c0405bfe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as p"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc402509",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
-   "id": "c2bc0d16",
+   "id": "8d284b94",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb202674",
+   "id": "cc509183",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -60,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda453a9",
+   "id": "39fcc804",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -68,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38278de9",
+   "id": "8a1ae35c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -76,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e55aed1",
+   "id": "3b24fe8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -84,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28cfb1ac",
+   "id": "9415c9c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -92,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb28ade5",
+   "id": "c4c9bcc0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -100,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce5d0f53",
+   "id": "8a115e52",
    "metadata": {},
    "outputs": [],
    "source": []
